--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Get User Media Code Along!</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.10/swiper-bundle.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +24,34 @@
           <p>Body Lab’s founder, Bridget Ford Hughes, says, “The feeling I want for my clients is of being at home in their bodies. Because in this world, we’re looking for the place we belong, where we feel whole and anchored. I believe it’s the soul’s journey to come back home to itself.”</p>
           <p>At Body Lab, we are 100% committed to your wellness. This is your time. You can turn off your cell phone, disconnect from your stress, and shift your focus to your body and mind.</p>
         </div>
-        <div class="col-70 pl-30"></div>
+        <div class="col-70 pl-30">
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <figure>
+                  <img src="swiper1.jpg" alt="">
+                </figure>
+              </div>
+              <div class="swiper-slide">
+                <figure>
+                  <img src="swiper2.jpg" alt="">
+                </figure>
+              </div>
+              <div class="swiper-slide">
+                <figure>
+                  <img src="swiper3.jpg" alt="">
+                </figure>
+              </div>
+              <div class="swiper-slide">
+                <figure>
+                  <img src="swiper4.jpg" alt="">
+                </figure>
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -342,6 +370,7 @@
     </div>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.10/swiper-bundle.min.js"></script>
   <script src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
   <script src="script.js"></script>
 
