--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </section>
   <section class="pt-100">
     <div class="container">
-      <div class="flex">
+      <div class="flex wrap">
         <div class="col-30">
           <h3 class="dark-text">The Studio Experience</h3>
           <p>The moment you step through the door of Body Lab, the fragrance of lemongrass essential oils will touch your senses, and you’ll begin to unwind, feeling your stress start to slip away. We invite you to relax in our waiting area before your appointment to center yourself and prepare for your session.</p>
@@ -285,10 +285,10 @@
         </div><div class="col-33 text-center contact-card">
           <h3 class="dark-text">Contact</h3>
           <p><strong>Studio</strong> 413.345.6899</p>
-          <p><a href="mailto:Bridget@bodylabgb.com"><strong>Bridget@bodylabgb.com</strong></a></p>
+          <p><a class="dark-text no-decoration" href="mailto:Bridget@bodylabgb.com"><strong>Bridget@bodylabgb.com</strong></a></p>
         </div>
       </div>
-      <a href="https://www.google.com/maps/place/115+Gas+House+Ln,+Great+Barrington,+MA+01230/@42.1994132,-73.3601929,18z/data=!4m2!3m1!1s0x89e766b7498edfa3:0x892be0b19f444675">
+      <a class="map" href="https://www.google.com/maps/place/115+Gas+House+Ln,+Great+Barrington,+MA+01230/@42.1994132,-73.3601929,18z/data=!4m2!3m1!1s0x89e766b7498edfa3:0x892be0b19f444675">
         <figure class="mb-30">
           <img src="BodyLab-GreatBarrington-GoogleMap3.jpg" alt="">
         </figure></a>
